objects/Performance_Indicator_Targets__c.object
<CustomObject><fields>
        <fullName>Interim_Measures_1__c</fullName>
        <label>Interim Measures 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Last_Year_Target_1__c</fullName>
        <label>Last Year Target 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 1</label>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Performance Indicator Targets (UIP Element)</relationshipLabel>
        <relationshipName>Performance_Indicator_Targets2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Measures_Metrics2__c</fullName>
        <label>Measures/Metrics</label>
        <picklist>
            <controllingField>Performance_Indicator__c</controllingField>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaggregated Grad Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropout Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mean CO ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESS Growth (AMAO 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESS Proficiency (AMAO 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAO 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other PWR Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental Measure(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Measures_Metrics__c</fullName>
        <defaultValue>"TCAP/CSAP, CoAlt/CSAPA, Lectura, Escritura"</defaultValue>
        <label>Measures and Metrics</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Next_Year_Related_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field ties This Year's Target to Next Year's Target.</description>
        <label>Next Year Related Target</label>
        <referenceTo>Performance_Indicator_Targets__c</referenceTo>
        <relationshipLabel>Performance Indicator Targets</relationshipLabel>
        <relationshipName>Performance_Indicator_Targets</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Next_Year_Target_1__c</fullName>
        <inlineHelpText>2015-16 Annual Performance Target</inlineHelpText>
        <label>Next Year Target 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Performance_Indicator__c</fullName>
        <label>Performance Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Achievement (Status)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaggregated Achievement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaggregated Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postsecondary &amp; Workforce Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English Language Development and Attainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Performance_against_Target_1__c</fullName>
        <label>Performance against Target 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Priority_Performance_Challenge_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Performance Challenge 1</label>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Performance Indicator Targets</relationshipLabel>
        <relationshipName>Performance_Indicator_Targets</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Subject_1__c</fullName>
        <label>Subject 1</label>
        <picklist>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaggregated Grad Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropout Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mean CO ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESS Growth (AMAO 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCESS Proficiency (AMAO 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCAP (AMAO 3)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Target_Reflection_1__c</fullName>
        <label>Target Reflection 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>This_Year_Target_1__c</fullName>
        <inlineHelpText>2014-15 Annual Performance Target</inlineHelpText>
        <label>This Year Target 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Performance Indicator Targets</relationshipLabel>
        <relationshipName>Performance_Indicator_Targets</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Performance Indicator Targets</label><nameField>
        <displayFormat>PI-{00000000}</displayFormat>
        <label>Performance Indicator Targets Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Performance Indicator Targets</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Performance_Indicator__c</columns>
        <columns>Priority_Performance_Challenge_1__c</columns>
        <columns>UIP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Next_Year_s_Target</fullName>
        <active>true</active>
        <description>This record type is used in Section IV to display Next Years target and any Interim Measures.</description>
        <label>Next Year's Target</label>
    </recordTypes><recordTypes>
        <fullName>Prior_Year_Target</fullName>
        <active>true</active>
        <description>This record type is used in Section II to display Prior Year targets.  It will auto-populate with the Current Years target from last years UIP.</description>
        <label>Prior Year Target</label>
    </recordTypes><recordTypes>
        <fullName>This_Year_s_Target</fullName>
        <active>true</active>
        <description>This record type is used in Section IV to display This Years targets.  It will auto-populate with Next Year's Target from last years UIP.</description>
        <label>This Year's Target</label>
    </recordTypes></CustomObject>